First version of english CV

--- a/english-cv/curriculum-vitae.tex
+++ b/english-cv/curriculum-vitae.tex
@@ -28,9 +28,9 @@
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 % personal data
-\name{Adrián}{García García}
+\name{Adrian}{Garcia Garcia}
 \title{Curriculum vitae}                               % optional, remove / comment the line if not wanted
-\address{C/Diligencia 4, D 4ºB}{28018 Madrid}{España}% optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
+\address{C/Diligencia 4, D 4ºB}{28018 Madrid}{Spain}% optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
 \phone[mobile]{639570909}                   % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
 %\phone[fixed]{+2~(345)~678~901}
 \email{adriagar@ucm.es}                               % optional, remove / comment the line if not wanted
@@ -59,54 +59,54 @@
 %-----       resume       ---------------------------------------------------------
 \makecvtitle
 
-\section{Formación académica}
+\section{Academic qualifications}
 %\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}  % arguments 3 to 6 can be left empty
-\cventry{2011--2016}{Grado en Ingeniería Informática}{UCM}{Madrid}{\textit{Media: 7,82}}{} % arguments 3 to 6 can be left empty
-\cventry{2016--act.}{Máster en Ingeniería Informática}{UCM}{Madrid}{\textit{Media: 9,12}}{30 créditos ECTS completados (66 matriculados).}
+\cventry{2011--2016}{Bachelor's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{\textit{Average: 7,82}}{} % arguments 3 to 6 can be left empty
+\cventry{2016--Now}{Master's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{\textit{Current average: 9,12}}{}
 
 
 % \section{Master thesis}
 % \cvitem{title}{\emph{Title}}
 % \cvitem{supervisors}{Supervisors}
 % \cvitem{description}{Short thesis abstract}
-\section{Premios}
-\cventry{Junio de 2016}{Matrícula de honor en Trabajo de Fin de Grado}{Facultad de Informática, UCM}{}{}{\begin{itemize}
-\item \textbf{Título}: Soporte de sistema operativo para ahorro de energía en plataformas móviles con procesadores multicore asimétricos.
+\section{Achievements}
+\cventry{June, 2016}{Graduated with special mention in the Final Project}{Complutense University of Madrid}{}{}{\begin{itemize}
+\item \textbf{Title}: Operating system support for improving energy efficiency in asymmetric multicore systems.
 \item \textbf{Director}: Juan Carlos Sáez Alcaide.
-\item \textbf{Departamento de Arquitectura de Computadores y Automática}.
+\item \textbf{Department of Computers' architecture and automatic}.
 \end{itemize}}
-\cventry{2011--2016}{Matriculas de honor del Grado en Ingeniería Informática}{UCM}{Madrid}{}{\begin{itemize}
-\item Sistemas operativos
-\item Ampliación de sistemas operativos y redes
-\item Arquitectura de computadores
-\item Arquitectura interna de Linux y Android
-\item Redes y seguridad
-\item Programación paralela para móviles y multicores
-\item Bases de datos
-\item Evaluación de configuraciones
+\cventry{2011--2016}{Subjects passed with honors on the Bachelor's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{}{\begin{itemize}
+\item Operating Systems
+\item Advanced Operating Systems and Networks
+\item Computer Architecture
+\item Linux and Android kernel architecture
+\item Networks and Security
+\item Mobile and multicore parallel programming
+\item Databases
+\item Cofigurations evaluation (Evaluacion de configuraciones??)
 \end{itemize}}
 
-\section{Experiencia profesional}
+\section{Work experience}
 % \cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}
-\cventry{Abr. 2016- Ago. 2016}{Becario de desarrollo software}{SATEC}{Madrid}{}{ Desarrollo de aplicaciones web de carácter empresarial con .NET MVC, Razor y jQuery UI, en concreto se participó en la creación de una aplicación web que gestionaba el parque móvil del estado.}
-\cventry{Nov. 2016- actualidad.}{Beca de colaboración con departamentos}{DACYA}{Madrid}{}{Desarrollo y estudio de un planificador en el kernel Linux consciente de la contención de recursos compartidos en sistemas asimétricos. Otorgada por el Ministerio de Educación, Cultura y Deporte.}
-\cventry{Feb. 2017- actualidad.}{Administrador de sistemas}{DACYA}{Madrid}{}{Administración de sistemas Linux y mantenimiento de la infraestructura física y virtualizada.}
-\cventry{Ago. 2016}{Desarrollo de {\color{blue}\href{www.ahoraarganda.es}{página web}} en Wordpress}{Grupo municipal Ahora Arganda}{}{}{}
+\cventry{Apr.-Aug. (2016)}{Internship in Software Developement}{SATEC}{Madrid}{}{Developement of web applications in C\# (.NET MVC), Razor and jQuery UI. Specifically, I contributed to build a web application that managed the government car management system.}
+\cventry{Nov. 2016}{Seven months in a colaboration scholarship with university departments}{Department of Compuer Architecture and Automatics}{Madrid}{}{Study and developement of a Linux kernel scheduler aware of the effects of shared-resource contention in asymmetric multicore systems. Awarded by the Spanish Ministry of Education, Culture and Sport.}
+\cventry{Feb. 2017-Now}{System Administrator}{Department of Compuer Architecture and Automatics}{Madrid}{}{Administration of Linux systems and maintenance of the physical and virtualized infraestructure.}
+\cventry{Aug. 2016}{Deployment and developement in Wordpress of a website for a Spanish political party {\color{blue}\href{www.ahoraarganda.es}{Ahora Arganda}}}{}{}{}{}
 
-\section{Otros méritos}
-\cventry{Sept. 2016}{Inglés}{Nivel C1}{}{}{\begin{itemize}
-\item Certificados de la Universidad de Cambridge.
+\section{Additional information}
+\cventry{12-30-1993}{Spanish}{Native}{}{}{}
+\cventry{Sept. 2016}{English}{Level: C1}{}{}{\begin{itemize}
+\item Cambridge English Certificates
 \begin{itemize}
-  \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfganJjYmFWdlFoanM}{First Certificate in English}} (FCE), Madrid, Abril de 2012.
-  \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgcGFJX3VPTGFyUE0}{Certificate in Advanced English}} (CAE), Madrid, Septiembre de 2016.
+  \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfganJjYmFWdlFoanM}{First Certificate in English}} (FCE), Madrid, April 2012.
+  \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgcGFJX3VPTGFyUE0}{Certificate in Advanced English}} (CAE), Madrid, September 2016.
 \end{itemize}
-\item Formación en la academia Dickens (2011 y 2015).
-\item Estancia de 1 mes en Athenry (Irlanda) con una familia nativa durante la que se realizaba un
-curso intensivo de inglés (Agosto de 2010): {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgSmRCM1NQV2lfdGc}{Certificado}}.
+\item English courses with native teachers in Dicken's academy (2011 y 2015).
+\item I stayed one month with a foster family in Athenry (Ireland) while I studied an intensive english course on the mornings (August 2010): {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgSmRCM1NQV2lfdGc}{Certificate}}.
 \end{itemize}}
-\cventry{Noviembre 2016}{Big Data: análisis de datos con python}{UCM}{Madrid}{}{Curso de formación continua de la UCM que enseñaba a obtener datos de páginas web, Twitter y ficheros en distintos formatos (.csv, .xls, .txt, etc.) para luego trabajar con ellos usando diferentes librerías científicas de python: numpy, matplotlib y pandas. {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificado}}.}
-\section{Otros aspectos}
-\cventry{Conocimientos}{Lenguajes de programación}{}{}{}{\begin{itemize}
+\cventry{Nov. 2016}{Course in Big Data: data analysis with python}{Complutense University of Madrid}{}{}{Continious formation course of the UCM that teached to gather data from web pages, Twitter and different file formats (csv, xls, txt, etc.) in order to parse them and work with them using different python libraries: numpy, matplotlib and pandas.{\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificate}}.}
+\section{Other skills}
+\cventry{Known technologies}{}{}{}{}{\begin{itemize}
 \item \textbf{Python}
 \begin{itemize}
   \item Pandas
@@ -116,9 +116,9 @@ curso intensivo de inglés (Agosto de 2010): {\color{blue}\href{https://drive.go
 \end{itemize}
 \item \textbf{C}
 \begin{itemize}
-  \item Módulos del kernel
+  \item Linux kernel modules
   \item Sockets
-  \item Tuberías
+  \item Pipes
 \end{itemize}
 \item \textbf{C++}
 \begin{itemize}
@@ -132,7 +132,7 @@ curso intensivo de inglés (Agosto de 2010): {\color{blue}\href{https://drive.go
   \item Razor
   \item jQuery UI
 \end{itemize}
-\item \textbf{Aplicaciones Android} ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}})
+\item \textbf{Android apps} ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}})
 \item \textbf{Java}
 \begin{itemize}
   \item Hibernate
@@ -145,42 +145,45 @@ curso intensivo de inglés (Agosto de 2010): {\color{blue}\href{https://drive.go
 \item \textbf{Bash}
 \medskip
 \end{itemize}}
-\cventry{}{Otras tecnologías}{}{}{}{\begin{itemize}
-\item \textbf{Software de control de versiones} ({\color{blue}\href{https://github.com/mizadri/}{GitHub}})
-\medskip
-\item \textbf{Bases de datos}
+\cventry{}{Other technologies}{}{}{}{\begin{itemize}
+\item \textbf{Databases}
   \begin{itemize}
   \item SQL
   \item MongoDB
   \item Neo4J
+  \item XML
+  \item Hibernate
 \end{itemize}
 \medskip
 \item \textbf{Big Data}
 \begin{itemize}
   \item Map Reduce
   \item Spark
-  \item Hadoop File System
 \end{itemize}
 \medskip
-\item \textbf{Machine Learning} ({\color{blue}\href{https://github.com/mizadri/big-data}{Implementaciones en python}}):
+\item \textbf{Machine Learning} ({\color{blue}\href{https://github.com/mizadri/big-data}{python implementations}}):
   \begin{itemize}
-    \item Árboles de clasificación ID3.
-    \item Índice completo (compresión de datos con variable-bytes, elias-gamma o elias-delta).
-    \item Índice vectorial.
-    \item Clasificador Bayesiano Simple (Naive Bayes).
+    \item ID3 classification trees.
+    \item Complete Index (Data compressions: variable-bytes, elias-gamma or elias-delta).
+    \item Vectorial Index.
+    \item Naive Bayes.
   \end{itemize}
   \medskip
-\item \textbf{Administración de redes y virtualización}
+\end{itemize}}
+\cventry{}{}{}{}{}{\begin{itemize}
+\item \textbf{Network administration and virtualization}
 \begin{itemize}
-  \item Configuración de redes IPv4 e IPv6 (configuración persistente con \textit{vtysh}).
-  \item Administración de máquinas via SSH.
-  \item Gestión de máquinas virtuales con kvm (\textit{virsh} y \textit{virt-manager}).
-  \item Instalación de entornos Docker.
+  \item IPv4 e IPv6 network configuration. Persistent with \textit{vtysh}(similar to CISCO syntax but Open Source).
+  \item System administration via SSH.
+  \item Virtual Machine management with kvm (\textit{virsh} and \textit{virt-manager}).
+  \item Docker configuration and deployment.
 \end{itemize}
 \medskip
-\item \textbf{Edición de textos en LaTeX} ({\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgdng1eHFyU1JPY1U}{Memoria de TFG}} o {\color{blue}\href{https://github.com/mizadri/LaTeX}{este CV}})
+\item \textbf{LaTeX for Scientific papers and reports} ({\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgdng1eHFyU1JPY1U}{Final Project}} or {\color{blue}\href{https://github.com/mizadri/LaTeX}{this CV}})
+\item \textbf{Version control software} ({\color{blue}\href{https://github.com/mizadri/}{GitHub}})
+\item Driving license.
+\medskip
 \end{itemize}}
-
 % \section{Computer skills}
 % \cvdoubleitem{category 1}{XXX, YYY, ZZZ}{category 4}{XXX, YYY, ZZZ}
 % \cvdoubleitem{category 2}{XXX, YYY, ZZZ}{category 5}{XXX, YYY, ZZZ}
